# ollama-docker

./: .env  .gitignore  LICENSE  Makefile  README.md  certificate.sh  chatengine.sh  docker-compose.yaml  docker-compose.yml  ingest.py  ingest.sh  langchain-ingest.py  langchain-retrieve.py  llamaindex-ingest.py  llamaindex-retrieve.py  llm.py  ollama-llamaindex-pipeline.py  ollama.sh  pyproject.toml  queryengine.sh  rag-llm-qdrant.py  rag-local.py  rag.py  requirements.txt  retrieve.py
.github/: CODEOWNERS  dependabot.yml  stale.yml
data/ollama/: .gitignore
data/ollama-web/: .gitignore
data/qdrant/: .gitignore
docker/ollama/: compose.yaml
docker/open-webui/: compose.yaml
docker/open-webui/data/: .gitignore
docker/pipelines/: compose.yaml
docker/pipelines/data/: .gitignore
docker/promptfoo/: compose.yaml
docker/promptfoo/data/: .gitignore  promptfoo.db
docker/qdrant/: compose.yaml
docker/qdrant/data/: .gitignore
docker/redis/: compose.yaml
docker/redis/config/: redis.conf
docker/traefik/: .gitignore  certificate.sh  compose.yaml  traefik.yaml
docker/traefik/config/: traefik.yaml
docker/traefik/config/certs/: localhost.crt  localhost.key
docker/traefik/config/conf/: headers.yaml  tls.yaml
rag/: .env  config.py  embeddings.py  ingest.py  llamaindex-retrieve-postprocess.py  llamaindex-retrieve.py  llm.py  ollama-llamaindex-pipeline.py  query_fusion_retrieve.py  retrieve-chatengine.py  retrieve-queryengine.py  util.py
src/rag/: .env  ingest.py  retrieve-queryengine.py
